@@ -36,8 +36,8 @@
 with System.Garlic.Thin;
 pragma Warnings (Off, System.Garlic.Thin);
 
-package System.Garlic.TCP.Platform_Specific is
+package System.Garlic.TCP_Platform_Specific is
 
    --  Empty version of this package.
 
-end System.Garlic.TCP.Platform_Specific;
+end System.Garlic.TCP_Platform_Specific;
